# simpblog

./: .gitignore  README.md  build.sh  main.py  makefile  pyproject.toml  requirements.txt  simpblog.py  simplog.py  ssg.py  todo.txt
output/: index.html
output/posts/: test.html
pages/: about.md
posts/: another-post.md  example-post.md  longpost.md  next-post.md
static/: styles.css
templates/: index.html  layout.html  page.html  post.html  tag.html  test.html
tests/: test_simplog.py
