[project]
name = "simpblog"
readme = "README.md"
description = "Simple static site generator, for blogs and basic sites"
authors = [
  { name="Alex Kennett", email="alex@kennett.dev" },
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = [
    "Jinja2==3.1.2",
    "markdown2==2.4.10",
    "MarkupSafe==2.1.3",
]

[project.scripts]
"simpblog" = "simpblog:main"

[project.optional-dependencies]
lint = [
    "ruff==0.9.6",
    "mypy==1.15.0",
]
[tool.ruff]
line-length = 120
indent-width = 4
[tool.ruff.lint]
# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]
[tool.mypy]
ignore_missing_imports = true
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
py-modules = ["simpblog"]

[project.urls]
Homepage = "https://github.com/alexk49/simpblog"
